# DualPhaseArTPCAnalyzer

./: .gitignore  README.md
.ipynb_checkpoints/: S2Analysis-checkpoint.ipynb
example/: README.md
example/RunLoopAnalysis/: CMakeLists.txt  main.cpp
example/S1S2Components/: main.cpp
example/S2BICCalculation/: CMakeLists.txt  main.cpp
example/SimpleS2Fit/: main.cpp
include/: ArDetectorHit.hh  ArDetectorHit_sptr.hh  ArTPCData.hh  ArTPCData_sptr.hh  ArTreeIO.hh  DPArTPCEventAnalysis.hh  DataReader.hh  EventAnalysisManager.hh  PulseSignalArray.hh  S2FitParHolder.hh  S2FitParHolder_sptr.hh  S2Function.hh  S2LossFCN.hh  S2SingleFunc.hh  Visualizer.hh
src/: ArDetectorHit.cc  ArTreeIO.cc  DPArTPCEventAnalysis.cc  EventAnalysisManager.cc  PulseSignalArray.cc  S2FitParHolder.cc  S2Function.cc  S2LossFCN.cc  Visualizer.cc
